<resources>
    <string name="app_title">UV Cluster</string>
    <string name="app_launcher_title_all_apps">All Apps</string>
    <string name="app_name">UV Cluster</string>
    <string name="display">DISPLAY</string>
    <string name="sound">SOUND</string>
    <string name="language">Language</string>
    <string name="time_zone">Time Zone</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="trips">Trips</string>
    <string name="settings">Settings</string>
    <string name="controls">Controls</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="brightness_level">%1$d %%</string>
    <string name="volume_level">%1$d %%</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="performance">Performance</string>
    <string name="data">Data</string>
    <string name="incognito">Incognito</string>
    <string name="general">General</string>
    <string name="system_updates">System Updates</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="back">Back</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Erase all your personal data. You can\'t reverse this back</string>
    <string name="software">Software</string>
    <string name="check_for_update">Check For Update</string>
    <string name="date_tnd_time">Date \u0026 Time</string>
    <string name="language_selected">Language Selected</string>
    <string name="searching">Searching</string>
    <string name="available_devices">Available Devices</string>
    <string name="discoverable">Discoverable</string>
    <string name="docs">Docs</string>
    <string name="emergency">Emergency</string>
    <string name="info">Info</string>
    <string name="tutorial">Tutorial</string>
    <string name="advanced_features">Advanced Features</string>
    <string name="violette">Violette</string>
    <string name="unknown_ssid"><![CDATA[<unknown ssid>]]></string>
    <string name="connect_to">"Connect to "</string>
    <string name="enter_wifi_password">Enter Wifi Password</string>
    <string name="password">Password</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="asia_kolkata">Asia/Kolkata</string>
    <string name="europe_berlin">Europe/Berlin</string>
    <string name="australia_sydney">Australia/Sydney</string>
    <string name="america_sao_paulo">America/Sao_Paulo</string>
    <string name="asia_tokyo">Asia/Tokyo</string>
    <string name="india_ist">India (IST)</string>
    <string name="germany_utc">Germany (UTC)</string>
    <string name="australia_aedt">Australia (AEDT)</string>
    <string name="brazil_brt">Brazil (BRT)</string>
    <string name="japan_jst">Japan (JST)</string>
    <string name="permission_required">Permission Required</string>
    <string name="rationale_message">This app needs permission: %1$s to work correctly.</string>
    <string name="allow">Allow</string>
    <string name="no_thanks">No Thanks</string>
    <string name="kmph">KMPH</string>
    <string name="eff">eff</string>
    <string name="whKm">Wh/km</string>
    <string name="km">km</string>
    <string name="range">Range</string>
    <string name="odo">odo</string>
    <string name="ride">this ride</string>
    <string name="brightness">Brightness</string>
    <string name="theme">Theme</string>
    <string name="parallax">Parallax</string>
    <string name="radar">Radar</string>
    <string name="mode">Mode</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="battery">Battery</string>
    <string name="media">Media</string>
    <string name="now_playing">Now Playing</string>
    <string name="connected">Connected</string>
    <string name="abs">ABS</string>
    <string name="dual">Dual</string>
    <string name="traction_control">Traction Control</string>
    <string name="regen">Regen</string>
    <string name="hill_hold">Hill Hold</string>
    <string name="tpms">TPMS</string>
    <string name="front">Front</string>
    <string name="psi">PSI</string>
    <string name="navigate">Navigate</string>
    <string name="volume">Volume</string>
    <string name="my_network">My Network</string>
    <string name="reset_done">Reset Done!</string>
    <string name="update">Update</string>
    <string name="system_update">System Update</string>
    <string name="update_completed">Update Completed!</string>
    <string name="unknown">Unknown</string>
    <string name="india">India</string>
    <string name="current_charge">Current Charge</string>
    <string name="battery_condition">Battery Condition</string>
    <string name="excellent">Excellent</string>
    <string name="battery_temp">Battery Temp</string>
    <string name="battery_serial_no">Battery Serial No.</string>
    <string name="winter_mode_screen">Wintermode</string>
    <string name="my_f77">My F77</string>
    <string name="my_x47">My X-47</string>
    <string name="insurance">Insurance</string>
    <string name="license">License</string>
    <string name="registration">Registration</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="road_side_assistance">Road Side Assistance</string>
    <string name="emergency_sos">Emergency SOS</string>
    <string name="short_cut_hold_hazard_switch">Short Cut: Hold Hazard Switch</string>
    <string name="name">Name</string>
    <string name="squadron_rank">Squadron Rank</string>
    <string name="lifetime_protons">Lifetime Protons</string>
    <string name="variant">Variant</string>
    <string name="color">Color</string>
    <string name="imei_no">IMEI No.</string>
    <string name="vehicle_software">Vehicle Software</string>
    <string name="next">Next</string>
    <string name="prev">Prev.</string>
    <string name="zoom_in_or_out">Zoom In &amp; Out</string>
    <string name="step_1">Step 1</string>
    <string name="plug_in_charger">Plug in Charger</string>
    <string name="winter_details">Winter mode helps you charge for months without interfering with battery drain</string>
    <string name="step_2">Step 2</string>
    <string name="turn_off_key">Turn off Key</string>
    <string name="percent">%</string>
    <string name="charge">Charge</string>
    <string name="tpms_is_locked">TPMS is locked</string>
    <string name="purchase_tpms_via_uv_app">Purchase TPMS via UV App</string>
    <string name="recommended_tyre_pressure">Recommended Tyre Pressure</string>
    <string name="tpms_warning_message">Increase 2–4 Psi when temp is high \n (Do not deflate)</string>
    <string name="ballistic">Ballistic</string>
    <string name="combat">Combat</string>
    <string name="glide">Glide</string>
    <string name="vehicle_in_lockdown">Vehicle in lockdown</string>
    <string name="use_uv_app_to_unlock_your_f77">Use UV app to unlock your F77</string>
    <string name="in_an_isolated_area">In an isolated area</string>
    <string name="please_park_f77">Please Park F77</string>
    <string name="ideal">Ideal</string>
    <string name="camera">Camera</string>
    <string name="console_alerts">Console Alerts</string>
    <string name="mirror_alerts">Mirror Alerts</string>
    <string name="audio_alerts">Audio Alerts</string>
    <string name="synced_5_mins_ago">Synced 5 mins ago</string>
    <string name="violette_is_on">Violette is On</string>
    <string name="violette_is_off">Violette is Off</string>
    <string name="violette_safety_features_always_on">Violette Safety features - Always On</string>
    <string name="violette_enabled">Violette Enabled</string>
    <string name="get_violette_in_app">Get Violette in App</string>
    <string name="violette_locked">Violette Locked</string>
    <string name="trip_distance">Trip Distance</string>
    <string name="trip_duration">Trip Duration</string>
    <string name="average_speed">Average Speed</string>
    <string name="trip_1">Trip 1</string>
    <string name="trip_2">Trip 2</string>
    <string name="trip_3">Trip 3</string>
    <string name="ride_modes">Ride Modes</string>
    <string name="rain">Rain</string>
    <string name="street">Street</string>
    <string name="custom">Custom</string>
    <string name="mono">Mono</string>
    <string name="tc3">TC3</string>
    <string name="tc2">TC2</string>
    <string name="tc1">TC1</string>
    <string name="sport">Sport</string>
    <string name="regen_modes">Regen Modes</string>
    <string name="_10_levels">10 Levels</string>
    <string name="_04_levels">04 Levels</string>
    <string name="r">R%1$d</string>
    <string name="dialog_title_reset">%1$s Reset</string>
    <string name="rec_52"><![CDATA[Rec<52]]></string>
    <string name="tool_bar">Tool bar</string>
    <string name="wi_fi_icon">Wi-Fi icon</string>
    <string name="bluetooth_icon">Bluetooth icon</string>
    <string name="network_icon">Network icon</string>
    <string name="left_indicator">Left indicator</string>
    <string name="vehicle_driving_mode">Vehicle Driving Mode icon</string>
    <string name="high_beam_icon">High beam icon</string>
    <string name="warning_icon">Warning icon</string>
    <string name="hill_hold_icon">Hill hold icon</string>
    <string name="traction_icon">Traction icon</string>
    <string name="abs_icon">ABS icon</string>
    <string name="manual_icon">Manual icon</string>
    <string name="right_indicator">Right indicator</string>
    <string name="regen_icon">regen icon</string>
    <string name="temperature_icon">Temperature icon</string>
    <string name="settings_icon">Settings icon</string>
    <string name="oil_indicator_icon">Oil indicator icon</string>
    <string name="fan_icon">Fan icon</string>
    <string name="rewind_button">Rewind button</string>
    <string name="pause_button">Pause button</string>
    <string name="enter_button">Enter button</string>
    <string name="forward_button">Forward button</string>
    <string name="top_bar">Top bar</string>
    <string name="triangle_progress_indicator">Triangle progress indicator</string>
    <string name="battery_bike_image">Battery bike image</string>
    <string name="on_selected">On Selected</string>
    <string name="off_selected">Off selected</string>
    <string name="delete_icon">Delete icon</string>
    <string name="headphone_icon">Headphone icon</string>
    <string name="navigation_icon">Navigation icon</string>
    <string name="manual_brightness_selected">Manual brightness selected</string>
    <string name="parallax_selected">Parallax selected</string>
    <string name="radar_selected">Radar selected</string>
    <string name="mode_auto_selected">Mode Auto selected</string>
    <string name="day_mode_selected">Day mode selected</string>
    <string name="night_mode_selected">Night mode selected</string>
    <string name="incognito_on_selected">Incognito On selected</string>
    <string name="incognito_off_selected">InCognito off selected</string>
    <string name="line">Line</string>
    <string name="plug_icon">Plug icon</string>
    <string name="key_icon">Key icon</string>
    <string name="winter_animation_image">Winter animation image</string>
    <string name="winter_ellipse_image">Winter ellipse image</string>
    <string name="f_29psi">F: 29PSI</string>
    <string name="r_33psi">R: 33PSI</string>
    <string name="_60">60%</string>
    <string name="current_version_v1_1_2024">Current Version: V1.1 (2024)</string>
    <string name="date_upload">Date Upload: 03/06/2025</string>
    <string name="update_available">Update Available: V1.2 (2025)</string>
    <string name="to_enter_winter_mode">To enter winter mode</string>
    <string name="_267">267</string>
</resources>