<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.features.menus.battery.winter.WinterModeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clChargerStatus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="512dp"
            android:contentDescription="@string/line"
            android:src="@drawable/ic_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvStep1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/step_1"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/ivLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPlug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:contentDescription="@string/plug_icon"
            android:src="@drawable/ic_plug"
            app:layout_constraintEnd_toEndOf="@id/ivLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStep1" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvEnterWinterMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/to_enter_winter_mode"
            android:textColor="@color/greyWinterMode"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/ivLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPlug" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvPlugCharger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/plug_in_charger"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/ivLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEnterWinterMode" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvWinterDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="153dp"
            android:layout_marginTop="53dp"
            android:text="@string/winter_details"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLine" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvStep2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="202dp"
            android:text="@string/step_2"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/tvStep1"
            app:layout_constraintStart_toStartOf="@id/ivLine"
            app:layout_constraintTop_toTopOf="@id/tvStep1" />

        <ImageView
            android:id="@+id/ivKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="213dp"
            android:layout_marginTop="97.5dp"
            android:contentDescription="@string/key_icon"
            android:src="@drawable/ic_key"
            app:layout_constraintStart_toEndOf="@id/ivLine"
            app:layout_constraintTop_toBottomOf="@id/tvStep2" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvTurnOffKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="64dp"
            android:text="@string/turn_off_key"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/ivLine"
            app:layout_constraintTop_toBottomOf="@id/ivKey" />

        <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
            android:id="@+id/tvBack"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_marginTop="36dp"
            android:drawableEnd="@drawable/ic_back"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/ivLine"
            app:layout_constraintStart_toStartOf="@id/ivLine"
            app:layout_constraintTop_toBottomOf="@id/tvWinterDetails" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clWinterMode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
            android:id="@+id/tvRangeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="184dp"
            android:text="@string/_267"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvRangeUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/km"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvRangeValue"
            app:layout_constraintStart_toEndOf="@id/tvRangeValue" />

        <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
            android:id="@+id/tvRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range"
            android:textColor="@color/greyWinterMode"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tvRangeValue"
            app:layout_constraintStart_toStartOf="@id/tvRangeValue"
            app:layout_constraintTop_toBottomOf="@id/tvRangeValue" />

        <ImageView
            android:id="@+id/ivAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="254dp"
            android:contentDescription="@string/winter_animation_image"
            android:src="@drawable/image_winter_animation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivWinterEllipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginTop="133dp"
            android:contentDescription="@string/winter_ellipse_image"
            android:src="@drawable/ic_winter_ellipse"
            app:layout_constraintStart_toStartOf="@id/ivAnimation"
            app:layout_constraintTop_toTopOf="@id/ivAnimation" />

        <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
            android:id="@+id/tvChargePercentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="184dp"
            android:text="@string/_60"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivAnimation"
            app:layout_constraintTop_toTopOf="parent" />

        <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
            android:id="@+id/tvPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvChargePercentValue"
            app:layout_constraintStart_toEndOf="@id/tvChargePercentValue" />

        <com.suprajit.uvcluster.ui.customWidget.SairaRegularTextView
            android:id="@+id/tvCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge"
            android:textColor="@color/greyWinterMode"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/tvChargePercentValue"
            app:layout_constraintTop_toBottomOf="@id/tvChargePercentValue" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="594dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/ivAnimation"
            app:layout_constraintStart_toStartOf="@id/ivAnimation"
            app:layout_constraintTop_toBottomOf="@id/ivAnimation">

            <ProgressBar
                android:id="@+id/sbBatteryMax"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_margin="0dp"
                android:background="@color/greyWinterModeProgressBackground"
                android:max="100"
                android:progress="60"
                android:progressDrawable="@drawable/progress_indicator_winter_mode"
                android:splitTrack="false"
                android:thumb="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_marginStart="475.2dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>