<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.settings.incognito.IncognitoFragment">

    <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:textFontWeight="400"
        android:text="@string/incognito"
        android:textColor="@color/unSelectedTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llIncognito"
        android:layout_width="628dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_stroke"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="@id/tvData"
        app:layout_constraintTop_toBottomOf="@id/tvData">

        <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
            android:id="@+id/tvIncognitoOn"
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textFontWeight="500"
            android:background="@color/activeSelectionRed"
            android:gravity="center"
            android:text="@string/on"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ivIncognitoOnSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/incognito_on_selected"
            android:src="@drawable/ic_selection"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/ivIncognitoOffSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/incognito_off_selected"
            android:rotation="180"
            android:src="@drawable/ic_selection"
            android:visibility="invisible" />

        <com.suprajit.uvcluster.ui.customWidget.BrutalTypeTextView
            android:id="@+id/tvIncognitoOff"
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textFontWeight="500"
            android:gravity="center"
            android:text="@string/off"
            android:textColor="@color/unSelected"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>